--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <p> Riva Aprilia Dewi [06.2020.1.07296] </p>
         <p> Hafizh Putra Priyatna [06.2020.1.07298] </p>
         <p> Febriansyah [06.2020.1.07285] </p>
+
+        <!-- coba coba -->
+        <p> Update 1 </p>
+
       </center>
       
     </main>
